# zygoat

./: .editorconfig  .flake8  .gitignore  .readthedocs.yml  LICENSE  Makefile  README.md  RESOURCES.md  mypy.ini  pyproject.toml  pytest.ini  ruff.toml  test.yml
.github/workflows/: codeql-analysis.yml  docs.yml  generated.yml  merge-dependabot-prs.yml  poetry-cmd.yml  publish.yml  refresh-dependencies.yml  test-output.yml  tests.yml
docs/: conf.py  configuration.rst  deployment.rst  index.rst  introduction.rst
docs/advanced/: base.rst  components.rst  included.rst  index.rst
docs/advanced/utils/: backend.rst  files.rst  index.rst  shell.rst
tests/: __init__.py  conftest.py  test_container_ext.py  test_zygoat.py
tests/projects/: test_dependencies.py
tests/projects/backend/: test_generate.py
tests/projects/frontend/: test_generate.py
zygoat/: __init__.py  cli.py  config.py  constants.py  container_ext.py  logging.py  project.py  types.py
zygoat/components/: __init__.py  base.py  base_deployment.py  codebuild.py  docker_compose.py  editorconfig.py  file_component.py  precommit.py  script.py  settings_component.py
zygoat/components/backend/: __init__.py  backend_deployment.py  banditrc.py  black.py  cache.py  command_component.py  dependencies.py  docker_compose.py  dockerfile.py  gitignore.py  pytest.py  reformat.py  wait_command.py  zappa_deployment.py  zappa_settings.py
zygoat/components/frontend/: __init__.py  dependencies.py  docker_compose.py  dockerfile.py  gitignore.py  jsconfig.py  next_config.py  proxy.py  yarn_component.py
zygoat/components/proxy/: __init__.py
zygoat/components/resources/: .pre-commit-config.yaml  backend-testing.yml  ci-start.sh  codebuild.yml  linting.yml  security.yml  testing.yml
zygoat/constants/: __init__.py  paths.py
zygoat/projects/backend/: __init__.py  dependencies.py  settings.py
zygoat/projects/finalize/: __init__.py
zygoat/projects/frontend/: __init__.py  dependencies.py  package.py
zygoat/resources/: .pre-commit-config.yaml  Caddyfile  __init__.py  docker-compose.yml
zygoat/resources/backend/: Dockerfile  Dockerfile.local  gunicorn.conf.py  mypy.ini  ruff.toml
zygoat/resources/frontend/: .prettierrc  .prettierrc.js  Dockerfile  Dockerfile.local  eslint.config.mjs  instrumentation-client.ts  instrumentation.ts  jest.config.js  (+7 more)
zygoat/utils/: __init__.py  backend.py  chdir.py  commands.py  dependencies.py  files.py  printing.py  shell.py  steps.py
(+108 files in other folders)
