[tool.poetry]
name = "zygoat"
version = "1.20.0"
description = ""
authors = ["Bequest, Inc. <oss@willing.com>"]
readme = "README.md"
documentation = "https://zygoat.readthedocs.io/en/latest/"

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
click = "^8.1.7"
colorama = "^0.4.4"
"ruamel.yaml" = "^0.17.10"
python-box = {extras = ["all"], version = "^7.1.1"}
virtualenv = "^20.24.6"
redbaron = "^0.9.2"
requests = "^2.31.0"
rtd-poetry = "^0.1.0"
semver = "^3.0.2"
toml = "^0.10.2"
importlib-metadata = "^6.8.0"

[tool.poetry.dev-dependencies]
pytest = "^7.4.3"
flake8 = "^6.1.0"
autopep8 = "^2.0.4"
flake8-black = "^0.2.3"
Sphinx = "^7.2.6"
sphinx-rtd-theme = "^1.3.0"

[tool.poetry.scripts]
zg = 'zygoat.cli:cli'
[tool.black]
line-length = 95
target-version = ['py37']
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
