[project]
name = "zygoat-gf"
version = "0.1.0"
description = ""
authors = [
    {name = "MetLife Legal Plans",email = "oss@willing.com"}
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "docker (>=7.1.0,<8.0.0)",
    "click (>=8.1.8,<9.0.0)",
    "colorama (>=0.4.6,<0.5.0)",
    "redbaron (>=0.9.2,<0.10.0)"
]

[tool.poetry]
packages = [{include = "zygoat"}]

[tool.poetry.scripts]
zygoat = 'zygoat:new'


[tool.poetry.group.dev.dependencies]
ruff = "^0.9.10"
pytest = "^8.3.5"
mypy = "^1.15.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
