[project]
name = "zygoat-gf"
version = "0.1.0"
description = ""
authors = [
    {name = "MetLife Legal Plans",email = "oss@willing.com"}
]
readme = "README.md"
requires-python = ">=3.9,<4.0"
dependencies = [
    "docker (>=7.1.0,<8.0.0)",
    "click (>=8.1.8,<9.0.0)",
    "colorama (>=0.4.6,<0.5.0)",
    "redbaron (>=0.9.2,<0.10.0)",
    "importlib-metadata (>=8.6.1,<9.0.0)",
    "importlib-resources (>=6.5.2,<7.0.0)",
    "requests (>=2.32.3,<3.0.0)",
    "toml (>=0.10.2,<0.11.0)"
]

[tool.poetry]
packages = [{include = "zygoat"}]

[tool.poetry.scripts]
zygoat = 'zygoat:new'


[tool.poetry.group.dev.dependencies]
ruff = "^0.9.10"
pytest = "^8.3.5"
mypy = "^1.15.0"
pytest-xdist = "^3.6.1"
types-requests = "^2.32.0.20250328"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
